2004-03-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* gnus-sum.el (gnus-thread-sort-functions): Added
	`gnus-thread-sort-by-most-recent-number' and
	`gnus-thread-sort-by-most-recent-date'.
	Reported by Kai Grossjohann <kai@emptydomain.de>.

2004-03-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-cus.el (gnus-agent-customize-category): Mismatched paren.

2004-03-02  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus-cus.el (gnus-agent-customize-category): Removed
	ignore-errors macro reference that required cl to be loaded at
	run-time.

	* gnus-range.el (gnus-sorted-range-intersection): Now accepts
	single-interval range of the form (min . max).  Previously the
	range had to look like ((min . max)).  Likewise, return
	(min . max) rather than ((min . max)).
	(gnus-range-map): Use gnus-range-normalize to accept
	single-interval range.

	* gnus-sum.el (gnus-summary-highlight-line): Articles stored in
	the cache, but not the agent, now appear with their usual face.

	* dgnushack.el (loaddir): New variable that is bound to the
	directory containing the dgnushack.el file. Use loaddir, rather
	than srcdir, to update load-path. Change lets dgnushack compile
	code in directories other than GNUS/lisp.

2004-03-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Don't bind w3m-safe-url-regexp.

	* gnus-art.el (gnus-article-wash-html-with-w3m): Don't make the
	w3m-safe-url-regexp variable buffer-local.

	* mm-view.el (mm-inline-text-html-render-with-w3m): Ditto.

2004-02-27  Simon Josefsson  <jas@extundo.com>

	* gnus-sum.el (gnus-move-group-prefix-function): Add, default to
	gnus-group-real-prefix.
	(gnus-summary-move-article): Use it, instead of
	gnus-group-real-prefix.

2004-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Bind w3m-safe-url-regexp.

	* gnus-art.el (gnus-article-wash-html-with-w3m): Make the
	w3m-safe-url-regexp variable buffer-local and set it as the value
	of mm-w3m-safe-url-regexp.

	* mm-view.el (mm-inline-text-html-render-with-w3m): Ditto.
