@@ -1,5 +1,8 @@
 2004-03-03  Per Abrahamsen  <abraham@dina.kvl.dk>
 
+	* gnus-agent.el (gnus-agent-read-local, gnus-agent-save-local):
+	Don't bind "obarray".
+
 	* gnus-sum.el (gnus-thread-sort-functions): Added
 	`gnus-thread-sort-by-most-recent-number' and
 	`gnus-thread-sort-by-most-recent-date'.
